# modem-prototype

./: .gitignore  AGENTS.md  README.md
.config/: control.jlinkscript
.github/workflows/: ci.yml
.west/: config  west.yml
common/: Kconfig
control/: CMakeLists.txt  Kconfig  linker-script.ld  one_month.h  one_month.txt  one_month_txt.inc  prj.conf
control/boards/: control_a4.overlay
control/boards/shields/sense/: sense_a3.overlay
control/dts/bindings/: vendor-prefixes.txt
control/dts/bindings/modem/: fph,rc7620.yaml
control/src/: main.c  modem_board.c  modem_shell.c  one_month_arr.h  txt2array.py
control/tests/catch2/: CMakeLists.txt
control/tests/catch2/smoke/: test_control_catch2_smoke.cpp
docs/bringup/: acceptance.md  modem-at-passthrough.md
docs/requirements/rc76xx/: README.md  firmware-update.md  host-interface-uart.md  power-sequencing.md  sleep-psm.md
platform/: Kconfig
platform/dts/bindings/: bosch,bmp581-i2c.yaml  bosch,bmp581.yaml  epson,rx8900ce.yaml  nxp,imx-pwm-ext.yaml  nxp,imx-tmr-ext.yaml  ralf_motor.yaml  sensirion,sdp3x.yaml  solomon,ssd1363-common-ext.yaml  solomon,ssd1363-i2c.yaml  solomon,ssd1363-spi.yaml  st,stm32u5-adv-timer-ltd.yaml  st,stm32u5-comp-ltd.yaml  tesm62c1.yaml
platform/src/: CMakeLists.txt
platform/src/modem-at/: CMakeLists.txt  modem-at.c
platform/src/modem-at/inc/: modem-at.h
platform/src/modem-board/: CMakeLists.txt  modem-board-core.c  modem-board-core.h  modem-board.c
platform/src/modem-board/inc/: modem-board.h  modem_board.h
platform/src/modem-celluar/: CMakeLists.txt  Kconfig  modem-rc7620.c
platform/src/modem-celluar/inc/: modem-rc7620.h
platform/src/modem-link/: CMakeLists.txt  modem-link-core.c  modem-link-internal.h  modem-link.c
platform/src/modem-link/inc/: modem-link-conn-mgr.h  modem-link.h
platform/src/modem-net/: CMakeLists.txt  modem-net-core.c  modem-net-core.h  modem-net-disconnect-fix.c  modem-net-shell.h  modem-net.c
platform/src/modem-net/inc/: modem-net.h
platform/src/modem-shell/: CMakeLists.txt  modem-shell-core.c  modem-shell-core.h  modem-shell-uart.h  modem-shell.c
platform/src/modem-shell/inc/: modem-shell-uart.h
platform/tests/catch2/: CMakeLists.txt
platform/tests/catch2/modem-at/: test_modem_at.cpp
platform/tests/catch2/modem-board/: test_modem_board_core.cpp
platform/tests/catch2/modem-link/: test_modem_link_core.cpp
platform/tests/catch2/modem-net/: test_modem_net_core.cpp
platform/tests/catch2/modem-shell/: test_modem_shell_core.cpp
platform/tests/catch2/shims/zephyr/: device.h  kernel.h
platform/tests/catch2/shims/zephyr/drivers/: uart.h
platform/tests/catch2/shims/zephyr/sys/: ring_buffer.h
platform/tests/catch2/smoke/: test_platform_catch2_smoke.cpp
targets/boards/fph/control/: CMakeLists.txt  Kconfig.control  Kconfig.defconfig  board.cmake  board.yml  control.dts  control.yaml  control_a4.overlay  control_a4_defconfig  control_defconfig  revision.cmake
targets/boards/fph/control/imx1050/: dcd.c  dcd.h  early_init.S  soc.c
targets/boards/fph/control/imx1050/xip/: IS25WX064_iMX1050_FlexSPI_NOR_config.c  imxrt1050_flexspi_nor_config.h
targets/boards/shields/sense/: Kconfig.shield  sense_a3.overlay
targets/boards/shields/sense/boards/sense_a3/: control.overlay  protection.overlay
